feat: ui personalization
